@@ -1,3 +1,7 @@
+2008-Sep-22  yselkowitz
+
+	* bin/cygport.in (cygautoreconf): Better detection of autoconf2.5.
+
 2008-Sep-07  yselkowitz
 
 	* lib/ruby-gnome2.cygclass (ruby_gnome2_install):
